Mostly fixing things in HTML version

--- a/02-hiv-aids.Rmd
+++ b/02-hiv-aids.Rmd
@@ -163,6 +163,8 @@ Estimates of ART coverage play a direct role in the provision and target setting
 
 <!-- Key data sources used to inform these indicators are: household surveys, programmatic data -->
 
+### Challenges
+
 Obtaining reliable, timely, estimates of these indicators at an appropriate spatial resolution is challenging.
 Among the most significant difficulties are:
 
@@ -189,7 +191,9 @@ Indicators rely on estimates of epidemiological parameters obtained from cohort 
 These parameters may not generalise to the setting of interest.
 Further, they are typically applied coarsely, and without proper accounting for uncertainty.
 
-The above challenges make direct interpretation of the data often misleading.
+### Statistical approaches
+
+The challenges above make direct interpretation of the data often misleading.
 Careful statistical modelling is required to overcome these limitations.
 
 1. **Borrowing information**
@@ -202,6 +206,8 @@ For example, infrequently run household surveys can be complimented by up to dat
 3. **Expert guidance**
 Expert epidemiological, demographic, and local stakeholder guidance can be used to improve estimates.
 Ensuring the quality of any data used in the estimation process is essential.
+
+### Future directions
 
 Aims for HIV response going forward, and the surveillance capabilities needed to meet them.
 
