--- a/03-bayesian.Rmd
+++ b/03-bayesian.Rmd
@@ -266,14 +266,14 @@ Finally, each selected household is visited, and all adults are interviewed.
 
 The probability an individual is sampled is equal to the probability their household is sampled.
 The first-stage sampling probability of the $j$th cluster in stratum $h$ given by
-$$
+\begin{equation}
 \pi_{1hj} = n_h \times \frac{N_{hj}}{\sum_j N_{hj}},
-$$
+\end{equation}
 where $N_{hj}$ is the number of households and $n_h$ be the number of clusters selected in stratum $h$.
 The second-stage sampling probability each household within the $i$th cluster in stratum $h$ is
-$$
+\begin{equation}
 \pi_{1hj} = \frac{n_{hj}}{N_{hj}},
-$$
+\end{equation}
 where $n_{hj}$ is the numer of households selected in cluster $j$ and stratum $h$.
 That is, each household in the cluster has equal selection probability.
 The overall selection probability of each household in cluster $j$ of stratum $h$ is $\pi_{hi} = \pi_{1hj} \times \pi_{2hj}$.
