--- a/references.bib
+++ b/references.bib
@@ -1133,7 +1133,7 @@ URL= {https://www.r-inla.org/faq},
 
 @techreport{world2016framework,
   title={A framework for voluntary medical male circumcision: effective HIV prevention and a gateway to improved adolescent boys'\& men's health in Eastern and Southern Africa by 2021},
-  author={World Health Organization and others},
+  author={{World Health Organization}},
   year={2016},
   institution={World Health Organization}
 }
@@ -1217,14 +1217,14 @@ doi = {10.1201/9781420072884-c30}
 
 @article{world2017consolidated,
   title={Consolidated guidelines on person-centred HIV patient monitoring and case surveillance},
-  author={World Health Organization and others},
+  author={{World Health Organization}},
   year={2017},
   publisher={World Health Organization}
 }
 
 @article{world2005guidelines,
   title={Guidelines for measuring national HIV prevalence in population-based surveys},
-  author={World Health Organization and others},
+  author={{World Health Organization}},
   year={2005},
   publisher={World Health Organization}
 }
@@ -1344,6 +1344,15 @@ doi = {10.1201/9781420072884-c30}
 @article{rue2020comment,
  author = {Rue, H{\aa}vard},
  title = {Comment on R-INLA Discussion Group thread},
- url = {https://groups.google.com/g/r-inla-discussion-group/c/l2fSYlbbJJM/m/8vUCjrO_BAAJ}},
+ howpublished = {\url{https://groups.google.com/g/r-inla-discussion-group/c/l2fSYlbbJJM/m/8vUCjrO_BAAJ}},
  year = {2020}
+}
+
+@incollection{leroux2000estimation,
+  title={Estimation of disease rates in small areas: a new mixed model for spatial dependence},
+  author={Leroux, Brian G and Lei, Xingye and Breslow, Norman},
+  booktitle={Statistical Models in Epidemiology, the Environment, and Clinical Trials},
+  pages={179--191},
+  year={2000},
+  publisher={Springer}
 }
