Add Zambia figures and multi-agyw text

--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -63,7 +63,7 @@ ssa_pop2022 <- 1.2 * 1e9 #' From the world bank
 ```
 
 This thesis is about applied and methodological Bayesian statistics.
-It is applied and methodological in that I am concerned first with real world questions and second with the means to answer them.
+It is applied and methodological in that I am concerned with real world questions and the means to answer them.
 It is Bayesian in that I arrive at conclusions based on data using probability models.
 
 (ref:gbd) HIV/AIDS is the largest cause of DALYs for non-infacts (>1 years) in SSA. One DALY represents the loss of the equivalent of one year of full health, and is calculated by the sum of years of life lost and years lost due to disability. The disability weights used by the @ihme2019 vary depending on severity of the condition.
@@ -73,14 +73,14 @@ knitr::include_graphics("figures/introduction/gbd.png")
 ```
 
 The real world questions relate to surveillance of the human immunodeficiency virus (HIV) epidemic in sub-Saharan Africa (SSA).
-The @ihme2019 found HIV to be the largest cause of disability adjusted life years (DALYs) in SSA among those one year and older (Figure \@ref(fig:gbd)).
+HIV is the largest cause of disability adjusted life years (DALYs) in SSA among those one year and older [@ihme2019; Figure \@ref(fig:gbd)].
 Using statistics to quantify the epidemic is an important part of the public health response, and the path towards disease control and elimination.
 However, there are substantial challenges involved in obtaining suitable estimates of relevant indicators.
 
 The estimates in this thesis are based on data recorded from national household surveys or routinely collected from healthcare facilities.
 An important feature of this data is its location and the time at which it was collected.
-While diverse, spatio-temporal data have distinctive commonalities.
-I draw on modelling techniques from spatio-temporal statistics.
+While diverse, spatio-temporal data have distinctive commonalities which reoccur across settings.
+As such, I draw on modelling techniques from spatio-temporal statistics.
 
 Computation is an essential part of modern statistical practice.
 Each project in this thesis, as well as the thesis itself, is accompanied by R code, hosted on GitHub.
