--- a/91-appendixB.Rmd
+++ b/91-appendixB.Rmd
@@ -1,5 +1,9 @@
 # A model for risk group proportions
 
+```{r}
+resource_version <- "20230627-144735-3da88508"
+```
+
 ## The Global AIDS Strategy
 
 \begin{table}[h]
@@ -193,7 +197,7 @@ Zimbabwe & 63 & 2 \\
 \caption{The numer of areas and analysis levels for each country that were used in the analysis.}
 \end{table}
 
-## Survey questions and risk group allocation
+## Survey questions and risk group allocation {#survey-questions}
 
 \begin{table}[h]
 \centering
@@ -228,3 +232,9 @@ Variable(s) & Description \\
 \end{tabularx}
 \caption{The survey questions included in Population-Based HIV Impact Assessment (PHIA) surveys.}
 \end{table}
+
+(ref:category-flowchart) Flowchart describing allocation of survey respondents to HIV risk groups.
+
+```{r category-flowchart, fig.cap="(ref:category-flowchart)"}
+knitr::include_graphics(paste0("resources/multi-agyw/", resource_version, "/depends/category-flowchart.png"))
+```
