--- a/front-and-back-matter/_acknowledgements.Rmd
+++ b/front-and-back-matter/_acknowledgements.Rmd
@@ -2,7 +2,7 @@ I would like to start by thanking my supervisors Seth Flaxman and Jeff Eaton for
 I am grateful for the research environment offered by the Modern Statistics and Statistical Machine Learning Centre for Doctoral Training at Imperial and Oxford, the HIV Inference Group at Imperial, and the Machine Learning and Global Health Network.
 Thanks to Mike McLaren, Kevin Esvelt, the Nucleic Acid Observatory team, and the Sculpting Evolution lab for hosting my visit to the MIT Media Lab.
 Thanks to Alex Stringer, and the Department of Statistics and Actuarial Science for hosting my visit to the University of Waterloo.
-My sense for what matters has been shaped, and arguably enriched, by the Effective Altruism community.
+My sense for what matters has been shaped (arguably improved) by the Effective Altruism community.
 This research was made possible by funding provided by the Bill & Melinda Gates Foundation and EPSRC.
 
 \begin{flushright}
