--- a/references.bib
+++ b/references.bib
@@ -1356,3 +1356,37 @@ doi = {10.1201/9781420072884-c30}
   year={2000},
   publisher={Springer}
 }
+
+@article{slaymaker2020croi,
+  title={{Risk factors for new HIV infections in the general population in sub-Saharan Africa}},
+  author={Slaymaker, Emma and Risher, Kathryn A. and Abdul, Ramadhani and Marston, Milly and Tomlin, Keith and Newton, Robert and Ndyanabo, Anthony and McLean, Estelle and Dadirai, Tawanda and Kwaro, Daniel and Baisley, Kathy and Kishamawe, Coleman},
+  year={2020}
+}
+
+@article{pettit1990conditional,
+  title={The conditional predictive ordinate for the normal distribution},
+  author={Pettit, LI},
+  journal={Journal of the Royal Statistical Society: Series B (Methodological)},
+  volume={52},
+  number={1},
+  pages={175--184},
+  year={1990},
+  publisher={Wiley Online Library}
+}
+
+@article{watanabe2013widely,
+  title={{A widely applicable Bayesian information criterion}},
+  author={Watanabe, Sumio},
+  journal={Journal of Machine Learning Research},
+  volume={14},
+  number={Mar},
+  pages={867--897},
+  year={2013}
+}
+
+@article{sailynoja2021graphical,
+  title={Graphical Test for Discrete Uniformity and its Applications in Goodness of Fit Evaluation and Multiple Sample Comparison},
+  author={S{\"a}ilynoja, Teemu and B{\"u}rkner, Paul-Christian and Vehtari, Aki},
+  journal={arXiv preprint arXiv:2103.10522},
+  year={2021}
+}
